tests/hulk/errors/semantic/wrong_arity.hulk
function add(x: Number, y: Number): Number {
    x + y;
}

{
    add(1, 2, 3);
};
